# curieosa

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: trie_curie_util.rs
src/: api.rs  curies.rs  curies.txt  lib.rs  trie.rs
