[package]
name = "curieosa"
version = "0.1.1-dev0"
description = "Parse parsing Internationalized Resource Identifiers (IRIs) into Compact Uniform Resource Identifiers (CURIEs)"
keywords = ["IRI", "CURIE", "ontology", "algorithms"]
edition = "2021"

homepage = "https://github.com/ielis/curieosa"
repository = "https://github.com/ielis/curieosa"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trie-rs = "0.1.1"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "trie_curie_util"
harness = false
